--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
                             </p>
                             <h1 class="display-5 mb-5">Request A Call-Back</h1>
                             <p><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfqLCEnMj4sYNESZdP1QVeJ3PihTXqFitL8ZFDuHQ5uwpABtQ/viewform?embedded=true" 
-                                       height="500" width="250" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></p>
+                                       height="500" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></p>
                         </div>
                         <!--<div class="row g-3">
                             <div class="col-sm-6">
