--- a/features.html
+++ b/features.html
@@ -152,11 +152,12 @@
             <div class="row justify-content-center">
                 <div class="col-lg-7">
                     <div class="bg-white border rounded p-4 p-sm-5 wow fadeInUp" data-wow-delay="0.5s">
-                        <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+                        <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 700px;">
                             <p class="d-inline-block border rounded text-primary fw-semi-bold py-1 px-3">Get In Touch
                             </p>
                             <h1 class="display-5 mb-5">Request A Call-Back</h1>
-                            <p><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfqLCEnMj4sYNESZdP1QVeJ3PihTXqFitL8ZFDuHQ5uwpABtQ/viewform?embedded=true" width="640" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></p>
+                            <p><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfqLCEnMj4sYNESZdP1QVeJ3PihTXqFitL8ZFDuHQ5uwpABtQ/viewform?embedded=true" 
+                                       width="100%" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></p>
                         </div>
                         <!--<div class="row g-3">
                             <div class="col-sm-6">
