--- a/packages.html
+++ b/packages.html
@@ -169,7 +169,7 @@
             <div class="columns" class="row g-4 align-items-end mb-4">
                 <ul class="price">
                   <li class="header">Monthly</li>
-                  <li class="grey">$ 7.35 / Month</li>
+                  <li class="grey">₹ 599 / Month</li>
                   <li>Company Account</li>
                   <li>Unlimited Employee</li>
                   <li>One time setup</li>
@@ -180,7 +180,7 @@
               <div class="columns" class="row g-4 align-items-end mb-4">
                 <ul class="price">
                   <li class="header">Half Yearly</li>
-                  <li class="grey">$ 12.25 / Half-Year</li>
+                  <li class="grey">₹ 2499 / Half-Year</li>
                   <li>Everything in Monthly Package</li>
                   <li>Complete company setup</li>
                   <li>One time demo</li>
@@ -191,7 +191,7 @@
               <div class="columns" class="row g-4 align-items-end mb-4">
                 <ul class="price">
                   <li class="header">Yearly</li>
-                  <li class="grey">$ 15.30 / year</li>
+                  <li class="grey">₹ 3999 / year</li>
                   <li>Everthing in Monthly Package</li>
                   <li>Everthing in Half-Yearly Package</li>
                   <li>Unlimited Demo</li>
