--- a/packages.html
+++ b/packages.html
@@ -174,6 +174,7 @@
                   <li>Unlimited Employee</li>
                   <li>One time setup</li>
                   <li>Basic company setup</li>
+                  <li>Create upto 11 employees. Additional Account - ₹ 49/Emplyoee/Month</li>
                   <li class="grey"><a href="#" class="button">Sign Up</a></li>
                 </ul>
               </div>
