--- a/packages.html
+++ b/packages.html
@@ -186,6 +186,7 @@
                   <li>Complete company setup</li>
                   <li>One time demo</li>
                   <li>1 Week Technical Support</li>
+                  <li>Create upto 21 employees. Additional Account - ₹ 39/Emplyoee/Month</li>
                   <li class="grey"><a href="#" class="button">Sign Up</a></li>
                 </ul>
               </div>
@@ -197,6 +198,7 @@
                   <li>Everthing in Half-Yearly Package</li>
                   <li>Unlimited Demo</li>
                   <li>24/7 Technical Support</li>
+                  <li>Create upto 51 employees. Additional Account - ₹ 29/Emplyoee/Month</li>
                   <li class="grey"><a href="#" class="button">Sign Up</a></li>
                 </ul>
               </div>
