--- a/packages.html
+++ b/packages.html
@@ -174,7 +174,7 @@
                   <li>Unlimited Employee</li>
                   <li>One time setup</li>
                   <li>Basic company setup</li>
-                  <li>Create upto 11 employees. 
+                  <li>Create upto 11 employees.<br> 
                       Additional Account - ₹ 49/Emplyoee/Month</li>
                   <li class="grey"><a href="#" class="button">Sign Up</a></li>
                 </ul>
@@ -187,7 +187,7 @@
                   <li>Complete company setup</li>
                   <li>One time demo</li>
                   <li>1 Week Technical Support</li>
-                  <li>Create upto 21 employees. 
+                  <li>Create upto 21 employees.<br> 
                       Additional Account - ₹ 39/Emplyoee/Month</li>
                   <li class="grey"><a href="#" class="button">Sign Up</a></li>
                 </ul>
@@ -200,7 +200,7 @@
                   <li>Everthing in Half-Yearly Package</li>
                   <li>Unlimited Demo</li>
                   <li>24/7 Technical Support</li>
-                  <li>Create upto 51 employees.
+                  <li>Create upto 51 employees.<br>
                       Additional Account - ₹ 29/Emplyoee/Month</li>
                   <li class="grey"><a href="#" class="button">Sign Up</a></li>
                 </ul>
