--- a/packages.html
+++ b/packages.html
@@ -175,7 +175,7 @@
                   <li>One time setup</li>
                   <li>Basic company setup</li>
                   <li>Create upto 11 employees.<br> 
-                      Additional Account - ₹ 49/Emplyoee/Month</li>
+                      <i>Additional Account - ₹ 49/Emplyoee/Month</i></li>
                   <li class="grey"><a href="#" class="button">Sign Up</a></li>
                 </ul>
               </div>
@@ -188,7 +188,7 @@
                   <li>One time demo</li>
                   <li>1 Week Technical Support</li>
                   <li>Create upto 21 employees.<br> 
-                      Additional Account - ₹ 39/Emplyoee/Month</li>
+                      <i>Additional Account - ₹ 39/Emplyoee/Month</i></li>
                   <li class="grey"><a href="#" class="button">Sign Up</a></li>
                 </ul>
               </div>
@@ -201,7 +201,7 @@
                   <li>Unlimited Demo</li>
                   <li>24/7 Technical Support</li>
                   <li>Create upto 51 employees.<br>
-                      Additional Account - ₹ 29/Emplyoee/Month</li>
+                      <i>Additional Account - ₹ 29/Emplyoee/Month</i></li>
                   <li class="grey"><a href="#" class="button">Sign Up</a></li>
                 </ul>
               </div>
