--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                     <p
                                         class="d-inline-block border border-white rounded text-primary fw-semi-bold py-1 px-3 animated slideInDown">
                                         Welcome to Haajiree</p>
-                                    <h1 class="display-1 mb-4 animated slideInDown">Complete Employee Management
+                                    <h1 class="display-1 mb-4 animated slideInDown" style="font-size: 50Px;">Complete Employee<br>Management
                                     </h1>
                                     <a href="features.html" class="btn btn-primary py-3 px-5 animated slideInDown">See Features</a>
                                 </div>
@@ -117,7 +117,7 @@
                                     <p
                                         class="d-inline-block border border-white rounded text-primary fw-semi-bold py-1 px-3 animated slideInDown">
                                         Welcome to Haajiree</p>
-                                    <h1 class="display-1 mb-4 animated slideInDown">Attendence - Task - Leave Management</h1>
+                                    <h1 class="display-1 mb-4 animated slideInDown" style="font-size: 50Px;">Attendence - Task - Leave<br>Management</h1>
                                     <a href="features.html" class="btn btn-primary py-3 px-5 animated slideInDown">See Features</a>
                                 </div>
                             </div>
