--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
                         <div class="container">
                             <div class="row justify-content-start">
                                 <div class="col-lg-8">
-                                    <p
+<!--                                     <p
                                         class="d-inline-block border border-white rounded text-primary fw-semi-bold py-1 px-3 animated slideInDown">
-                                        Welcome to Haajiree</p>
+                                        Welcome to Haajiree</p> -->
                                     <h1 class="display-1 mb-4 animated slideInDown" style="font-size: 50Px;">Complete Employee<br>Management
                                     </h1>
                                     <a href="features.html" class="btn btn-primary py-3 px-5 animated slideInDown">See Features</a>
@@ -114,9 +114,9 @@
                         <div class="container">
                             <div class="row justify-content-start">
                                 <div class="col-lg-7">
-                                    <p
+<!--                                     <p
                                         class="d-inline-block border border-white rounded text-primary fw-semi-bold py-1 px-3 animated slideInDown">
-                                        Welcome to Haajiree</p>
+                                        Welcome to Haajiree</p> -->
                                     <h1 class="display-1 mb-4 animated slideInDown" style="font-size: 50Px;">Attendence - Task - Leave<br>Management</h1>
                                     <a href="features.html" class="btn btn-primary py-3 px-5 animated slideInDown">See Features</a>
                                 </div>
